tests/devtools-cli-test/test/commands/oapp/__snapshots__/wire.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`command oapp wire with invalid options with invalid config option should fail with a malformed JS file (001) 1`] = `
"/Users/jan/Workspace/devtools/node_modules/.pnpm/yoga-layout-prebuilt@1.10.0/node_modules/yoga-layout-prebuilt/yoga-layout/build/Release/nbind.js:53
        throw ex;
        ^

Error: Config from file 'test/commands/oapp/__data__/configs/invalid.config.001.js' is malformed. Please fix the following errors:

Property 'contracts.0.point': Required
Property 'contracts.0.config': Required
Property 'contracts.1.point': Required
Property 'contracts.1.config': Required
Property 'connections': Required
    at /Users/jan/Workspace/devtools/packages/devtools-cli/dist/cli.js:63745:11
    at async _Command.<anonymous> (/Users/jan/Workspace/devtools/packages/devtools-cli/dist/cli.js:68153:19)
    at async _Command.parseAsync (/Users/jan/Workspace/devtools/packages/devtools-cli/dist/cli.js:1782:9)

Node.js v18.16.0
"
`;

exports[`command oapp wire with invalid options with invalid config option should fail with a misconfigured file (001) 1`] = `
"/Users/jan/Workspace/devtools/node_modules/.pnpm/yoga-layout-prebuilt@1.10.0/node_modules/yoga-layout-prebuilt/yoga-layout/build/Release/nbind.js:53
        throw ex;
        ^

Error: Config from file 'test/commands/oapp/__data__/configs/valid.config.misconfigured.001.js' is malformed. Please fix the following errors:

Property 'contracts.0.point': Required
Property 'contracts.0.config': Required
Property 'contracts.1.point': Required
Property 'contracts.1.config': Required
Property 'connections.0.vector': Required
Property 'connections.0.config': Required
Property 'connections.1.vector': Required
Property 'connections.1.config': Required
    at /Users/jan/Workspace/devtools/packages/devtools-cli/dist/cli.js:63745:11
    at async _Command.<anonymous> (/Users/jan/Workspace/devtools/packages/devtools-cli/dist/cli.js:68153:19)
    at async _Command.parseAsync (/Users/jan/Workspace/devtools/packages/devtools-cli/dist/cli.js:1782:9)

Node.js v18.16.0
"
`;

exports[`command oapp wire with invalid options with invalid config option should fail with an empty JS file 1`] = `
"/Users/jan/Workspace/devtools/node_modules/.pnpm/yoga-layout-prebuilt@1.10.0/node_modules/yoga-layout-prebuilt/yoga-layout/build/Release/nbind.js:53
        throw ex;
        ^

Error: Config from file 'test/commands/oapp/__data__/configs/invalid.config.empty.js' is malformed. Please fix the following errors:

Property 'contracts': Required
Property 'connections': Required
    at /Users/jan/Workspace/devtools/packages/devtools-cli/dist/cli.js:63745:11
    at async _Command.<anonymous> (/Users/jan/Workspace/devtools/packages/devtools-cli/dist/cli.js:68153:19)
    at async _Command.parseAsync (/Users/jan/Workspace/devtools/packages/devtools-cli/dist/cli.js:1782:9)

Node.js v18.16.0
"
`;

exports[`command oapp wire with invalid options with invalid config option should fail with an empty JSON file 1`] = `
"/Users/jan/Workspace/devtools/node_modules/.pnpm/yoga-layout-prebuilt@1.10.0/node_modules/yoga-layout-prebuilt/yoga-layout/build/Release/nbind.js:53
        throw ex;
        ^

Error: Unable to read config file 'test/commands/oapp/__data__/configs/invalid.config.empty.json': SyntaxError: /Users/jan/Workspace/devtools/tests/devtools-cli-test/test/commands/oapp/__data__/configs/invalid.config.empty.json: Unexpected end of JSON input
    at /Users/jan/Workspace/devtools/packages/devtools-cli/dist/cli.js:63726:11
    at async _Command.<anonymous> (/Users/jan/Workspace/devtools/packages/devtools-cli/dist/cli.js:68153:19)
    at async _Command.parseAsync (/Users/jan/Workspace/devtools/packages/devtools-cli/dist/cli.js:1782:9)

Node.js v18.16.0
"
`;

exports[`command oapp wire with invalid options with invalid setup option should fail with a malformed JS file (001) 1`] = `
"/Users/jan/Workspace/devtools/node_modules/.pnpm/yoga-layout-prebuilt@1.10.0/node_modules/yoga-layout-prebuilt/yoga-layout/build/Release/nbind.js:53
        throw ex;
        ^

Error: Setup from file 'test/commands/oapp/__data__/setups/invalid.setup.001.js' is malformed. Please fix the following errors:

Property 'createSdk': Expected function, received array
Property 'createSigner': Required
    at /Users/jan/Workspace/devtools/packages/devtools-cli/dist/cli.js:68088:11
    at async _Command.<anonymous> (/Users/jan/Workspace/devtools/packages/devtools-cli/dist/cli.js:68146:19)
    at async _Command.parseAsync (/Users/jan/Workspace/devtools/packages/devtools-cli/dist/cli.js:1782:9)

Node.js v18.16.0
"
`;

exports[`command oapp wire with invalid options with invalid setup option should fail with an empty JS file 1`] = `
"/Users/jan/Workspace/devtools/node_modules/.pnpm/yoga-layout-prebuilt@1.10.0/node_modules/yoga-layout-prebuilt/yoga-layout/build/Release/nbind.js:53
        throw ex;
        ^

Error: Setup from file 'test/commands/oapp/__data__/setups/invalid.setup.empty.js' is malformed. Please fix the following errors:

Property 'createSdk': Required
Property 'createSigner': Required
    at /Users/jan/Workspace/devtools/packages/devtools-cli/dist/cli.js:68088:11
    at async _Command.<anonymous> (/Users/jan/Workspace/devtools/packages/devtools-cli/dist/cli.js:68146:19)
    at async _Command.parseAsync (/Users/jan/Workspace/devtools/packages/devtools-cli/dist/cli.js:1782:9)

Node.js v18.16.0
"
`;

exports[`command oapp wire with valid configs should not understand hardhat config 1`] = `
"/Users/jan/Workspace/devtools/node_modules/.pnpm/yoga-layout-prebuilt@1.10.0/node_modules/yoga-layout-prebuilt/yoga-layout/build/Release/nbind.js:53
        throw ex;
        ^

Error: Config from file 'test/commands/oapp/__data__/configs/valid.config.connected.js' is malformed. Please fix the following errors:

Property 'contracts.0.point': Required
Property 'contracts.0.config': Required
Property 'contracts.1.point': Required
Property 'contracts.1.config': Required
Property 'connections.0.vector': Required
Property 'connections.0.config': Required
Property 'connections.1.vector': Required
Property 'connections.1.config': Required
    at /Users/jan/Workspace/devtools/packages/devtools-cli/dist/cli.js:63745:11
    at async _Command.<anonymous> (/Users/jan/Workspace/devtools/packages/devtools-cli/dist/cli.js:68153:19)
    at async _Command.parseAsync (/Users/jan/Workspace/devtools/packages/devtools-cli/dist/cli.js:1782:9)

Node.js v18.16.0
"
`;
